--- a/argocd-apps/cert-manager/cert-manager.yaml
+++ b/argocd-apps/cert-manager/cert-manager.yaml
@@ -1,8 +1,14 @@
-project: cert-manager
-source:
-  repoURL: 'https://charts.jetstack.io'
-  targetRevision: v1.15.1
-  chart: cert-manager
-destination:
-  server: 'https://kubernetes.default.svc'
-  namespace: cert-manager
+---
+apiVersion: argoproj.io/v1alpha1
+kind: Application
+metadata:
+  name: cert-manager
+spec:
+  destination:
+    namespace: cert-manager
+    server: https://kubernetes.default.svc
+  project: cert-manager
+  source:
+    chart: cert-manager
+    repoURL: https://charts.jetstack.io
+    targetRevision: v1.15.1
