--- a/argocd-apps/ingress-nginx/ingress-nginx.yaml
+++ b/argocd-apps/ingress-nginx/ingress-nginx.yaml
@@ -1,8 +1,14 @@
-project: ingress-nginx
-source:
-  repoURL: 'https://kubernetes.github.io/ingress-nginx'
-  targetRevision: 4.11.0
-  chart: ingress-nginx
-destination:
-  server: 'https://kubernetes.default.svc'
-  namespace: ingress-nginx
+---
+apiVersion: argoproj.io/v1alpha1
+kind: Application
+metadata:
+  name: ingress-nginx
+spec:
+  destination:
+    namespace: ingress-nginx
+    server: https://kubernetes.default.svc
+  project: ingress-nginx
+  source:
+    chart: ingress-nginx
+    repoURL: https://kubernetes.github.io/ingress-nginx
+    targetRevision: 4.11.0
