--- a/manifests/argocd/cert.yaml
+++ b/manifests/argocd/cert.yaml
@@ -1,16 +1,15 @@
 apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
-  name: unifi-cert
-  namespace: unifi
+  name: argocd-cert
 spec:
-  commonName: unifi.lab.intra
+  commonName: argocd.lab.intra
   dnsNames:
-  - unifi.lab.intra
+  - argocd.lab.intra
   issuerRef:
     kind: ClusterIssuer
     name: rpllabs-issuer
-  secretName: unifi-tls
+  secretName: argocd-server-tls
   subject:
     countries:
     - FR
