--- a/manifests/prometheus-stack/cert-alertmanager.yaml
+++ b/manifests/prometheus-stack/cert-alertmanager.yaml
@@ -1,16 +1,15 @@
 apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
-  name: authentik-cert
-  namespace: authentik
+  name: alertmanager-cert
 spec:
-  commonName: auth.lab.intra
+  commonName: alertmanager.lab.intra
   dnsNames:
-  - auth.lab.intra
+  - alertmanager.lab.intra
   issuerRef:
     kind: ClusterIssuer
     name: rpllabs-issuer
-  secretName: authentik-tls
+  secretName: alertmanager-tls
   subject:
     countries:
     - FR
