--- a/manifests/prometheus-stack/cert-grafana.yaml
+++ b/manifests/prometheus-stack/cert-grafana.yaml
@@ -1,16 +1,15 @@
 apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
-  name: argocd-cert
-  namespace: argocd
+  name: grafana-cert
 spec:
-  commonName: argocd.lab.intra
+  commonName: grafana.lab.intra
   dnsNames:
-  - argocd.lab.intra
+  - grafana.lab.intra
   issuerRef:
     kind: ClusterIssuer
     name: rpllabs-issuer
-  secretName: argocd-server-tls
+  secretName: grafana-tls
   subject:
     countries:
     - FR
