--- a/manifests/prometheus-stack/cert-prometheus.yaml
+++ b/manifests/prometheus-stack/cert-prometheus.yaml
@@ -1,16 +1,15 @@
 apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
-  name: alertmanager-cert
-  namespace: monitoring
+  name: prometheus-cert
 spec:
-  commonName: alertmanager.lab.intra
+  commonName: prometheus.lab.intra
   dnsNames:
-  - alertmanager.lab.intra
+  - prometheus.lab.intra
   issuerRef:
     kind: ClusterIssuer
     name: rpllabs-issuer
-  secretName: alertmanager-tls
+  secretName: prometheus-tls
   subject:
     countries:
     - FR
