Switch to latest for 1.29 support

--- a/values/rancher.yaml
+++ b/values/rancher.yaml
@@ -104,7 +104,7 @@ noProxy: 127.0.0.0/8,10.0.0.0/8,172.16.0.0/12,192.168.0.0/16,.svc,.cluster.local
 rancherImage: rancher/rancher
 # rancher/rancher image tag. https://hub.docker.com/r/rancher/rancher/tags/
 # Defaults to .Chart.appVersion
-rancherImageTag: v2.8.5
+rancherImageTag: v2.9.0-rc4
 
 # Override imagePullPolicy for rancher server images
 # options: Always, Never, IfNotPresent
