--- a/argocd-apps/rancher/rancher.yaml
+++ b/argocd-apps/rancher/rancher.yaml
@@ -9,9 +9,9 @@ spec:
     server: https://kubernetes.default.svc
   sources:
     # Chart from chart repo
-    - repoURL: https://releases.rancher.com/server-charts/stable
+    - repoURL: https://releases.rancher.com/server-charts/latest
       chart: rancher
-      targetRevision: 2.8.5
+      targetRevision: 2.9.0-rc4
       helm:
         valueFiles:
           - $values/values/rancher.yaml
