--- a/argocd-apps/authentik/authentik.yaml
+++ b/argocd-apps/authentik/authentik.yaml
@@ -16,7 +16,7 @@ spec:
         valueFiles:
           - $values/values/authentik.yaml
     # Values from git
-    - repoURL: https://github.com/plcnk/k8s_conf
+    - repoURL: https://github.com/plcnk/kube-configs
       targetRevision: HEAD
       ref: values
   project: authentik
