--- a/argocd-apps/uptime-kuma/uptime-kuma.yaml
+++ b/argocd-apps/uptime-kuma/uptime-kuma.yaml
@@ -19,4 +19,4 @@ spec:
     - repoURL: https://github.com/plcnk/kube-configs
       targetRevision: HEAD
       ref: values
-  project: uptime-kuma
+  project: monitoring
