feat(monito): Remove Alertmanager & ingress

--- a/values/prometheus-stack.yaml
+++ b/values/prometheus-stack.yaml
@@ -266,7 +266,7 @@ alertmanager:
 
   ## Deploy alertmanager
   ##
-  enabled: true
+  enabled: false
 
   ## Annotations for Alertmanager
   ##
@@ -388,7 +388,7 @@ alertmanager:
   #       {{ end }}
 
   ingress:
-    enabled: true
+    enabled: false
 
     # For Kubernetes >= 1.18 you should specify the ingress-controller via the field ingressClassName
     # See https://kubernetes.io/blog/2020/04/02/improvements-to-the-ingress-api-in-kubernetes-1.18/#specifying-the-class-of-an-ingress
@@ -422,10 +422,10 @@ alertmanager:
     ## TLS configuration for Alertmanager Ingress
     ## Secret must be manually created in the namespace
     ##
-    tls:
-      - secretName: alertmanager-tls
-        hosts:
-        - alertmanager.lab.intra
+    tls: []
+      # - secretName: alertmanager-tls
+      #   hosts:
+      #   - alertmanager.lab.intra
 
   ## Configuration for Alertmanager secret
   ##
@@ -3259,7 +3259,7 @@ prometheus:
   #     someoneelse:$apr1$DMZX2Z4q$6SbQIfyuLQd.xmo/P0m2c.
 
   ingress:
-    enabled: true
+    enabled: false
 
     # For Kubernetes >= 1.18 you should specify the ingress-controller via the field ingressClassName
     # See https://kubernetes.io/blog/2020/04/02/improvements-to-the-ingress-api-in-kubernetes-1.18/#specifying-the-class-of-an-ingress
@@ -3292,10 +3292,10 @@ prometheus:
     ## TLS configuration for Prometheus Ingress
     ## Secret must be manually created in the namespace
     ##
-    tls:
-      - secretName: prometheus-tls
-        hosts:
-          - prometheus.lab.intra
+    tls: []
+      # - secretName: prometheus-tls
+      #   hosts:
+      #     - prometheus.lab.intra
 
   ## Configuration for creating an Ingress that will map to each Prometheus replica service
   ## prometheus.servicePerReplica must be enabled
