--- a/argocd-apps/sealsed-secrets/kustomization.yaml
+++ b/argocd-apps/sealsed-secrets/kustomization.yaml
@@ -1,7 +1,6 @@
 ---
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: gitea
+namespace: argocd
 resources:
-  - cert.yaml
-  - rpl-ca.yaml
+  - application.yaml
