--- a/argocd-apps/sealed-secrets/application.yaml
+++ b/argocd-apps/sealed-secrets/application.yaml
@@ -5,7 +5,7 @@ metadata:
   name: sealed-secrets
 spec:
   destination:
-    namespace: sealed-secrets
+    namespace: kube-system
     server: https://kubernetes.default.svc
   project: default
   source:
