test(argo): Change Gitea project to default

--- a/argocd-apps/gitea/gitea.yaml
+++ b/argocd-apps/gitea/gitea.yaml
@@ -19,4 +19,4 @@ spec:
     - repoURL: https://github.com/plcnk/kube-configs
       targetRevision: HEAD
       ref: values
-  project: gitea
+  project: default
