--- a/argocd-apps/authentik/application.yaml
+++ b/argocd-apps/authentik/application.yaml
@@ -2,21 +2,21 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: prometheus-stack
+  name: authentik
 spec:
   destination:
-    namespace: monitoring
+    namespace: authentik
     server: https://kubernetes.default.svc
   sources:
     # Chart from chart repo
-    - repoURL: https://prometheus-community.github.io/helm-charts
-      chart: kube-prometheus-stack
-      targetRevision: 61.6.1
+    - repoURL: https://charts.goauthentik.io
+      chart: authentik
+      targetRevision: 2024.6.2
       helm:
         valueFiles:
-          - $values/values/prometheus-stack.yaml
+          - $values/values/authentik.yaml
     # Values from git
     - repoURL: https://github.com/plcnk/kube-configs
       targetRevision: HEAD
       ref: values
-  project: monitoring
+  project: default
