--- a/argocd-apps/cert-manager/application.yaml
+++ b/argocd-apps/cert-manager/application.yaml
@@ -7,7 +7,7 @@ spec:
   destination:
     namespace: cert-manager
     server: https://kubernetes.default.svc
-  project: cert-manager
+  project: default
   source:
     chart: cert-manager
     repoURL: https://charts.jetstack.io
