--- a/argocd-apps/cert-manager/kustomization.yaml
+++ b/argocd-apps/cert-manager/kustomization.yaml
@@ -3,4 +3,4 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: argocd
 resources:
-  - cert-manager.yaml
+  - application.yaml
