--- a/argocd-apps/ingress-nginx/application.yaml
+++ b/argocd-apps/ingress-nginx/application.yaml
@@ -2,21 +2,21 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: authentik
+  name: ingress-nginx
 spec:
   destination:
-    namespace: authentik
+    namespace: ingress-nginx
     server: https://kubernetes.default.svc
+  project: default
   sources:
     # Chart from chart repo
-    - repoURL: https://charts.goauthentik.io
-      chart: authentik
-      targetRevision: 2024.6.2
+    - repoURL: https://kubernetes.github.io/ingress-nginx
+      chart: ingress-nginx
+      targetRevision: 4.11.1
       helm:
         valueFiles:
-          - $values/values/authentik.yaml
+          - $values/values/ingress-nginx.yaml
     # Values from git
     - repoURL: https://github.com/plcnk/kube-configs
       targetRevision: HEAD
       ref: values
-  project: authentik
