--- a/argocd-apps/prometheus-stack/application.yaml
+++ b/argocd-apps/prometheus-stack/application.yaml
@@ -2,21 +2,21 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: ingress-nginx
+  name: prometheus-stack
 spec:
   destination:
-    namespace: ingress-nginx
+    namespace: monitoring
     server: https://kubernetes.default.svc
-  project: ingress-nginx
   sources:
     # Chart from chart repo
-    - repoURL: https://kubernetes.github.io/ingress-nginx
-      chart: ingress-nginx
-      targetRevision: 4.11.1
+    - repoURL: https://prometheus-community.github.io/helm-charts
+      chart: kube-prometheus-stack
+      targetRevision: 61.6.1
       helm:
         valueFiles:
-          - $values/values/ingress-nginx.yaml
+          - $values/values/prometheus-stack.yaml
     # Values from git
     - repoURL: https://github.com/plcnk/kube-configs
       targetRevision: HEAD
       ref: values
+  project: default
