--- a/argocd-apps/prometheus-stack/kustomization.yaml
+++ b/argocd-apps/prometheus-stack/kustomization.yaml
@@ -3,4 +3,4 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: argocd
 resources:
-  - prometheus-stack.yaml
+  - application.yaml
