feat(lb): Install kube-vip

--- a/argocd-apps/kustomization.yaml
+++ b/argocd-apps/kustomization.yaml
@@ -8,6 +8,7 @@ resources:
   - ./cert-manager
   - ./gitea
   - ./ingress-nginx
+  - ./kube-vip
   - ./prometheus-stack
   - ./rancher
   - ./sealed-secrets
