feat: Install Metallb and more

--- a/argocd-apps/kustomization.yaml
+++ b/argocd-apps/kustomization.yaml
@@ -9,6 +9,7 @@ resources:
   - ./gitea
   - ./ingress-nginx
   - ./kube-vip
+  - ./metallb
   - ./prometheus-stack
   - ./rancher
   - ./sealed-secrets
