--- a/manifests/metallb/kustomization.yaml
+++ b/manifests/metallb/kustomization.yaml
@@ -1,7 +1,7 @@
 ---
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: cert-manager
+namespace: metallb-system
 resources:
-  - ca-sealed.yaml
-  - clusterissuer.yaml
+  - ipaddresspool.yaml
+  - l2advertisement.yaml
