--- a/manifests/namespaces/ns.yaml
+++ b/manifests/namespaces/ns.yaml
@@ -27,6 +27,11 @@ metadata:
 apiVersion: v1
 kind: Namespace
 metadata:
+  name: metallb-system
+---
+apiVersion: v1
+kind: Namespace
+metadata:
   name: monitoring
 ---
 apiVersion: v1
