--- a/manifests/gitea/cert.yaml
+++ b/manifests/gitea/cert.yaml
@@ -4,19 +4,19 @@ kind: Certificate
 metadata:
   name: gitea-cert
 spec:
-  commonName: git.lab.intra
+  commonName: git.plcnk.home
   dnsNames:
-  - git.lab.intra
+    - git.plcnk.home
   issuerRef:
     kind: ClusterIssuer
-    name: rpllabs-issuer
+    name: home-issuer
   secretName: gitea-tls
   subject:
     countries:
-    - FR
+      - FR
     localities:
-    - Toulouse
+      - Toulouse
     organizations:
-    - RPL Labs SAS
+      - plcnk Home
     provinces:
-    - Haute-Garonne
+      - Haute-Garonne
