--- a/manifests/unifi/cert.yaml
+++ b/manifests/unifi/cert.yaml
@@ -4,19 +4,19 @@ kind: Certificate
 metadata:
   name: unifi-cert
 spec:
-  commonName: unifi.lab.intra
+  commonName: unifi.plcnk.home
   dnsNames:
-  - unifi.lab.intra
+    - unifi.plcnk.home
   issuerRef:
     kind: ClusterIssuer
-    name: rpllabs-issuer
+    name: home-issuer
   secretName: unifi-tls
   subject:
     countries:
-    - FR
+      - FR
     localities:
-    - Toulouse
+      - Toulouse
     organizations:
-    - RPL Labs SAS
+      - plcnk Home
     provinces:
-    - Haute-Garonne
+      - Haute-Garonne
