--- a/values/rancher.yaml
+++ b/values/rancher.yaml
@@ -44,7 +44,7 @@ restrictedAdmin: false
 #   value: "1.0"
 
 # Fully qualified name to reach your Rancher server
-hostname: rancher.lab.intra
+hostname: rancher.plcnk.home
 
 ## Optional array of imagePullSecrets containing private registry credentials
 ## Ref: https://kubernetes.io/docs/tasks/configure-pod-container/pull-image-private-registry/
