feat(apps): Install cloudnative-pg

--- a/manifests/namespaces/ns.yaml
+++ b/manifests/namespaces/ns.yaml
@@ -17,6 +17,11 @@ metadata:
 apiVersion: v1
 kind: Namespace
 metadata:
+  name: cnpg-system
+---
+apiVersion: v1
+kind: Namespace
+metadata:
   name: gitea
 ---
 apiVersion: v1
