--- a/manifests/argocd/kustomization.yaml
+++ b/manifests/argocd/kustomization.yaml
@@ -4,5 +4,5 @@ kind: Kustomization
 namespace: argocd
 resources:
   - cert.yaml
-  - private-repo-secret.yaml
-  - rpl-ca.yaml
+  - sealed-private-repo.yaml
+  - plcnk-ca.yaml
