feat: v2. New cluster, big changes. (#70)
* feat(lb): Install kube-vip

* feat: Install Metallb and more

* feat: Change URLs

* feat(apps): Install cloudnative-pg

* feat: Reorg + some Sealed Secrets

* fix: Linting

--- a/argocd-apps/cnpg/application.yaml
+++ b/argocd-apps/cnpg/application.yaml
@@ -2,19 +2,19 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: cert-manager
+  name: cloudnative-pg
 spec:
   destination:
-    namespace: cert-manager
+    namespace: cnpg-system
     server: https://kubernetes.default.svc
   sources:
     # Chart from chart repo
-    - repoURL: https://charts.jetstack.io
-      chart: cert-manager
-      targetRevision: v1.15.2
+    - repoURL: https://cloudnative-pg.io/charts
+      chart: cloudnative-pg
+      targetRevision: 0.21.6
       helm:
         valueFiles:
-          - $values/values/cert-manager.yaml
+          - $values/values/cnpg.yaml
     # Values from git
     - repoURL: https://github.com/plcnk/kube-configs
       targetRevision: HEAD
