--- a/argocd-apps/kustomization.yaml
+++ b/argocd-apps/kustomization.yaml
@@ -6,8 +6,11 @@ resources:
   - ./argocd
   - ./authentik
   - ./cert-manager
+  - ./cnpg
   - ./gitea
   - ./ingress-nginx
+  - ./kube-vip
+  - ./metallb
   - ./prometheus-stack
   - ./rancher
   - ./sealed-secrets
