--- a/argocd-apps/metallb/kustomization.yaml
+++ b/argocd-apps/metallb/kustomization.yaml
@@ -1,7 +1,6 @@
 ---
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: cert-manager
+namespace: argocd
 resources:
-  - sealed-ca.yaml
-  - clusterissuer.yaml
+  - application.yaml
