--- a/values/argocd.yaml
+++ b/values/argocd.yaml
@@ -43,7 +43,7 @@ crds:
 global:
   # -- Default domain used by all components
   ## Used for ingresses, certificates, SSO, notifications, etc.
-  domain: argocd.lab.intra
+  domain: argocd.plcnk.home
 
   # -- Common labels for the all resources
   additionalLabels: {}
@@ -199,7 +199,7 @@ configs:
     dex.config: |
       connectors:
         - config:
-            issuer: https://auth.lab.intra/application/o/argocd/
+            issuer: https://auth.plcnk.home/application/o/argocd/
             clientID: 8TTDD1TK5NcFXRa2BnVWNxKrxkNXWOevfskhFSSS
             clientSecret: $dex.authentik.clientSecret
             insecureEnableGroups: true
@@ -1030,16 +1030,16 @@ dex:
 
   # -- Additional volumeMounts to the dex main container
   volumeMounts:
-  - name: rpl-ca
-    mountPath: /etc/ssl/certs/rpl-root.crt
-    subPath: rpl-root.crt
+  - name: plcnk-ca
+    mountPath: /etc/ssl/certs/plcnk-root.crt
+    subPath: plcnk-root.crt
     readOnly: false
 
   # -- Additional volumes to the dex pod
   volumes:
-  - name: rpl-ca
+  - name: plcnk-ca
     configMap:
-      name: rpl-ca
+      name: plcnk-ca
 
   ## Dex server emptyDir volumes
   emptyDir:
@@ -2184,7 +2184,7 @@ server:
 
     # -- Argo CD server hostname
     # @default -- `""` (defaults to global.domain)
-    hostname: "argocd.lab.intra"
+    hostname: "argocd.plcnk.home"
 
     # -- The path to Argo CD server
     path: /
