--- a/argocd-apps/metallb/application.yaml
+++ b/argocd-apps/metallb/application.yaml
@@ -20,3 +20,14 @@ spec:
       targetRevision: HEAD
       ref: values
   project: default
+  ignoreDifferences:
+    - group: "apiextensions.k8s.io"
+      kind: CustomResourceDefinition
+      name: bgppeers.metallb.io
+      jsonPointers:
+        - /spec/conversion/webhook/clientConfig/caBundle
+    - group: "apiextensions.k8s.io"
+      kind: CustomResourceDefinition
+      name: addresspools.metallb.io
+      jsonPointers:
+        - /spec/conversion/webhook/clientConfig/caBundle
