--- a/manifests/authentik/kustomization.yaml
+++ b/manifests/authentik/kustomization.yaml
@@ -4,4 +4,6 @@ kind: Kustomization
 namespace: authentik
 resources:
   - cert.yaml
+  - cnpg-authentik.yaml
   - ingress.yaml
+  - sealed-secret-key.yaml
