--- a/values/authentik.yaml
+++ b/values/authentik.yaml
@@ -1,49 +1,51 @@
 ---
 global:
-    image:
-        repository: ghcr.io/goauthentik/server
-        tag: 2024.6.1
+  image:
+    repository: ghcr.io/goauthentik/server
+    tag: 2024.6.1
+  env:
+    - name: AUTHENTIK_SECRET_KEY
+      valueFrom:
+        secretKeyRef:
+          name: secret-key
+          key: secret_key
+    - name: AUTHENTIK_POSTGRESQL__PASSWORD
+      valueFrom:
+        secretKeyRef:
+          name: cnpg-authentik-app
+          key: password
 
 authentik:
-    secret_key: "2fkyKhai9KXpy66c2rP7JNvgDjiAeRXq9gyNcy5hhWXgh9FA9v"
-    # This sends anonymous usage-data, stack traces on errors and
-    # performance data to sentry.io, and is fully opt-in
-    error_reporting:
-        enabled: false
-    postgresql:
-        password: "w3EsGc6bgvJC8dNfDZ9Co2vEmT4xWh"
+  # This sends anonymous usage-data, stack traces on errors and
+  # performance data to sentry.io, and is fully opt-in
+  error_reporting:
+    enabled: false
+  postgresql:
+    host: "cnpg-authentik-rw"
 
 server:
-    ingress:
-        # Specify kubernetes ingress controller class name
-        ingressClassName: nginx
-        enabled: true
-        annotations:
-            kubernetes.io/ingress.class: nginx
+  ingress:
+    # Specify kubernetes ingress controller class name
+    ingressClassName: nginx
+    enabled: true
+    annotations:
+      kubernetes.io/ingress.class: nginx
+    hosts:
+      - auth.plcnk.home
+    paths:
+      - /
+    pathType: Prefix
+    tls:
+      - secretName: authentik-tls
         hosts:
-            - auth.plcnk.home
-        paths:
-            - /
-        pathType: Prefix
-        tls:
-            - secretName: authentik-tls
-              hosts:
-                  - auth.plcnk.home
+          - auth.plcnk.home
 
 postgresql:
-    enabled: true
-    auth:
-        # Password for the "postgres" admin user
-        postgresPassword: "n8Vx7VJpbwuoCD2RojqarLOvtc3Z0K"
-        # Password for the database user. Default username "authentik"
-        password: "w3EsGc6bgvJC8dNfDZ9Co2vEmT4xWh"
-    image:
-        registry: docker.io
-        repository: bitnami/postgresql
-        tag: 15.7.0-debian-12-r19
+  enabled: false
+
 redis:
-    enabled: true
-    image:
-        registry: docker.io
-        repository: bitnami/redis
-        tag: 7.2.5-debian-12-r4
+  enabled: true
+  image:
+    registry: docker.io
+    repository: bitnami/redis
+    tag: 7.2.5-debian-12-r4
