feat(monito): Monitoring v2

--- a/manifests/prometheus-stack/kustomization.yaml
+++ b/manifests/prometheus-stack/kustomization.yaml
@@ -4,5 +4,6 @@ kind: Kustomization
 namespace: monitoring
 resources:
   - cert-grafana.yaml
-  - oauth-secret.yaml
+  - sealed-grafana-admin.yaml
+  - sealed-oauth-generic.yaml
   - plcnk-ca.yaml
