feat(cnpg): Enable pod monitor

--- a/values/cnpg.yaml
+++ b/values/cnpg.yaml
@@ -143,7 +143,7 @@ monitoring:
   grafanaDashboard:
     create: true
     # -- Allows overriding the namespace where the ConfigMap will be created, defaulting to the same one as the Release.
-    namespace: "monitoring"
+    namespace: ""
     # -- The name of the ConfigMap containing the dashboard.
     configMapName: "cnpg-grafana-dashboard"
     # -- Label that ConfigMaps should have to be loaded as dashboards.  DEPRECATED: Use labels instead.
